# mss

./: .gitignore  CMakeLists.txt  Color_Modifier.hpp  Doxyfile  Function_Forwarder.cpp  Function_Forwarder.hpp  Graphics_Object.cpp  Graphics_Object.hpp  Makefile  Module.cpp  Module.hpp  Oscillator.cpp  Oscillator.hpp  Output.cpp  Output.hpp  README.md  Timer.cpp  Timer.hpp  build.sh  event_handler.cpp  event_handler.hpp  function_forwarder.cpp  function_forwarder.hpp  graphics_object_utils.cpp  graphics_object_utils.hpp  graphics_objects_utils.cpp  graphics_objects_utils.hpp  image_processing.cpp  image_processing.hpp  initialize.cpp  initialize.hpp  load_patch.cpp  load_patch.hpp  main.cpp  main.hpp  main2.cpp  main_helpers.cpp  main_helpers.hpp  module_utils.cpp  module_utils.hpp  (+11 more)
Graphics_Objects/: Button.cpp  Button.hpp  Input_Text_Box.cpp  Input_Text_Box.hpp  Input_Toggle_Button.cpp  Input_Toggle_Button.hpp  Page.cpp  Page.hpp  Rect.cpp  Rect.hpp  Text.cpp  Text.hpp  Text_Box.cpp  Text_Box.hpp  Toggle_Button.cpp  Toggle_Button.hpp  Waveform.cpp  Waveform.hpp
Modules/: Adsr.cpp  Adsr.hpp  Delay.cpp  Delay.hpp  Filter.cpp  Filter.hpp  Mixer.cpp  Mixer.hpp  Multiplier.cpp  Multiplier.hpp  Noise.cpp  Noise.hpp  Oscillator.cpp  Oscillator.hpp  Output.cpp  Output.hpp  Sah.cpp  Sah.hpp  VCA.cpp  VCA.hpp
example_patches/: adsr_test.synth  funny_note.sp  funny_note.synth  goofy_siren.sp  goofy_siren.synth  happy_notes.sp  happy_notes.synth  happy_phasing_notes.synth  rohrer.synth  simple_siren.sp  simple_siren.synth  wub_wub.sp  wub_wub.synth
graphics/: CMakeLists.txt  Graphics_Listener.hpp  Graphics_Object.cpp  Graphics_Object.hpp  graphics_config.cpp  graphics_config.hpp
graphics/Graphics_Objects/: Button.cpp  Button.hpp  Input_Text_Box.cpp  Input_Text_Box.hpp  Input_Toggle_Button.cpp  Input_Toggle_Button.hpp  Page.cpp  Page.hpp  Rect.cpp  Rect.hpp  Text.cpp  Text.hpp  Text_Box.cpp  Text_Box.hpp  Toggle_Button.cpp  Toggle_Button.hpp  Waveform.cpp  Waveform.hpp
modules/: Module.cpp  Module.hpp
modules/Modules/: .Oscillator.cpp.swo  .Oscillator.hpp.swo  .Output.cpp.swo  Adsr.cpp  Adsr.hpp  Delay.cpp  Delay.hpp  Filter.cpp  Filter.hpp  Mixer.cpp  Mixer.hpp  Multiplier.cpp  Multiplier.hpp  Noise.cpp  Noise.hpp  Oscillator.cpp  Oscillator.hpp  Output.cpp  Output.hpp  Sah.cpp  Sah.hpp
src/: Function_Forwarder.cpp  Function_Forwarder.hpp  event_handler.cpp  event_handler.hpp  image_processing.cpp  image_processing.hpp  initialize.cpp  load_patch.hpp  main.cpp  main.hpp  main_helpers.hpp  module_utils.cpp  module_utils.hpp  populate_wavetables.cpp  populate_wavetables.hpp  save_patch.hpp  signal_processing.hpp
src/graphics/: Graphics_Listener.hpp  Graphics_Object.hpp  graphics_config.cpp  graphics_config.hpp
src/graphics/Graphics_Objects/: Button.cpp  Rect.hpp  Text.cpp  Text_Box.cpp  Toggle_Button.cpp  Waveform.cpp
src/modules/: Module.hpp
src/modules/Modules/: Adsr.cpp  Adsr.hpp  Delay.cpp  Filter.cpp  Input.cpp  Input.hpp  Mixer.hpp  Noise.hpp  Oscillator.cpp  Oscillator.hpp  Output.cpp  Output.hpp  Sah.hpp
synth.dSYM/Contents/: Info.plist
